<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="about_the_app">About the app</string>
    <string name="album_cover">Album cover</string>
    <string name="app_name">RunBeat</string>
    <string name="choose_music_source">Choose what your running music should be based on</string>
    <string name="continue_in_backgrund">Continue in background</string>
    <string name="email_subject">RunBeat Feedback</string>
    <string name="error">Unexpected error</string>
    <string name="exit">exit</string>
    <string name="feedback_email">csebe99@gmail.com</string>
    <string name="info_about_runbeat">Information about RunBeat</string>
    <string name="install_spotify">Install Spotify</string>
    <string name="loading_playlists">Loading your playlists…</string>
    <string name="my_library">My library</string>
    <string name="my_library_description">Use my saved tracks</string>
    <string name="no">No</string>
    <string name="no_connection">No connection</string>
    <string name="no_connection_message">RunBeat could not connect to the internet. Check your internet connection
        and try again.
    </string>
    <string name="notification_channel_name">RunBeat is running in background</string>
    <string name="notification_text">RunBeat is running</string>
    <string name="other_title">Other</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_description">Choose a playlist from my playlists</string>
    <string name="premium_required">Spotify Premium required</string>
    <string name="premium_required_message">RunBeat requires a Spotify Premium account to play your music. Upgrade to premium and try again.</string>
    <string name="quit">Quit</string>
    <string name="quit_or_background">Do you want to quit RunBeat or should it still choose your music in the
        background?
    </string>
    <string name="quit_runbeat">Quit RunBeat</string>
    <string name="remove_account_summary">Disconnect your Spotify account from RunBeat</string>
    <string name="remove_spotify_account">Remove Spotify account</string>
    <string name="retry">retry</string>
    <string name="save_changes">Save changes</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_summary">Report a bug or send feedback to the developer</string>
    <string name="settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="source_of_songs">Source of songs</string>
    <string name="source_of_songs_summary">Choose what songs you want to play</string>
    <string name="spotify_not_installed">Spotify not installed</string>
    <string name="spotify_not_installed_message">This app uses Spotify to play music. Install the Spotify app and try again.</string>
    <string name="spotify_premium_url">https://www.spotify.com/premium/</string>
    <string name="spotify_running">Spotify Running</string>
    <string name="spotify_running_description">Use the Spotify Running playlists</string>
    <string name="switch_label">Auto detection</string>
    <string name="title_spotify_settings">Account settings</string>
    <string name="unable_to_load_playlists">Unable to load playlists</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="upgrade_premium">Upgrade to premium</string>
    <string name="want_to_save_now">Do you want to save changes now?</string>
    <string name="webview_description">Log in to your account and click \"Remove Access\" next
        to RunBeat to disconnect your Spotify account from the app.
    </string>
    <string name="yes">Yes</string>
</resources>
